# modelbench

./: .gitignore  GETTING_STARTED.md  README.md
.beads/: issues.jsonl  metadata.json
files/: HARDENING_PLAN.md  README.md  cli.py  dashboard.py  generators.py  grading.py  metrics.py  providers.example.json  providers.json  providers.py  pyproject.toml  report.py  requirements.txt  runner.py  runreport.py  storage.py  telemetry_schema.json  test_bench.py  test_cli.py  test_dashboard.py  test_grading.py  test_metrics.py  test_runreport.py  test_storage.py  test_uncertainty.py
files/fixtures/: baseline_metrics.json
files/patches/: bench-9et.2.patch  bench-9et.3.patch  bench-mf4.4.patch  bench-yvr.1.patch
